Elaborate on building and running